fix chat bot overlap

--- a/src/projects/list/components/Projects/ProjectCardHeader.scss
+++ b/src/projects/list/components/Projects/ProjectCardHeader.scss
@@ -2,7 +2,6 @@
 
 :global {
     .project-card-header {
-      flex: 1;
       .project-header {
         display: flex;
         flex-direction: row;
